--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="코린이 - 프로필 링크">
+    <meta property="og:title" content="그리니즘 - 프로필 링크">
     <meta property="og:description" content="어서와 코딩은 처음이지?">
     <meta property="og:image" content="memoji.png">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
-    <title>코린이 - 프로필 링크</title>
+    <title>그리니즘 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             {
@@ -31,16 +31,18 @@
             background-size: cover;
         }
         .main {
-            color: rgb(52, 237, 157);
+            color: rgb(172, 28, 249);
             font-size: 20px;
+            font-weight: bold;
 
             margin-top: 30px;
             margin-bottom: 10px;
 
         }
         .sub {
-            color: rgb(52, 237, 157);
+            color: rgb(172, 28, 249);
             font-size: 14px;
+            font-weight: bold;
 
             margin-top: 0px;
             margin-bottom: 30px;
